environments/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fleet-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # 1. Ruch do Backendu (zostawiamy prefiks /api, bo kod w Pythonie go oczekuje)
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
      
      # 2. Ruch do dokumentacji Swaggera i OpenAPI
      - path: /docs
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
      - path: /openapi.json
        pathType: Exact
        backend:
          service:
            name: backend-service
            port:
              number: 8000

      # 3. Cała reszta ruchu leci na Frontend Next.js (domyślny fallback)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 3000
